--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "dev":"webpack-dev-server  --inline --hot"
+    "dev": "webpack-dev-server  --inline --hot"
   },
   "author": "uzaif nilger",
   "license": "ISC",
@@ -18,8 +18,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "history": "https://registry.npmjs.org/history/-/history-3.2.1.tgz",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "webpack": "^1.14.0"
   }
 }
